--- a/index.html
+++ b/index.html
@@ -5,6 +5,14 @@
     <title></title> 
   </head>
   <body>
+    <ul>
+      <li>List item 1</li>
+      <li>List item 1</li>
+    </ul>
     
+    <ul>
+      <li>List item 1</li>
+      <li>List item 1</li>
+    </ul>
   </body>
 </html>
